--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bsc-download-page",
-  "homepage": "http://MarkKoenig95.github.io/bsc-download-page",
+  "homepage": "http://app.biblesc.com",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy": "npm run build",
+    "predeploy": "yarn build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
